--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -19,17 +19,18 @@
 \def\Normal{\mathrm{Normal}}
 \def\X{{\mathcal X}}
 \def\Y{{\mathcal Y}}
-\def\RL{{r}}
 \def\N{{\mathcal N}}
-\def\Prefix{{r_p}}
-\def\PrefixP{{r'_p}}
+
+\newcommand{\x}{\mathbf{x}}
+\newcommand{\y}{\mathbf{y}}
+\def\RL{{d}}
+\def\Prefix{d_p}
+\def\Obj{\ell}
 \def\Reg{{\lambda}}
 \def\MaxLength{{K_{\text{max}}}}
 \def\RuleSet{{\mathcal S}}
-\newcommand{\x}{\mathbf{x}}
-\newcommand{\y}{\mathbf{y}}
+\def\Cap{\text{cap}}
 
-\newcommand{\eins}{\mbox{$1 \hspace{-1.0mm} {\bf l}$}}
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\Ac}{\mathcal{A}^c}
 \newcommand{\T}[3]{T_{#1}(#2 \leftarrow #3)}
