--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -11,6 +11,7 @@
 \usepackage{algpseudocode}
 \usepackage{todonotes}
 \usepackage{subfig}
+\usepackage{dsfont}
 
 \usepackage{tikz}
 \usetikzlibrary{arrows}
