--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -30,6 +30,7 @@
 \def\MaxLength{{K_{\text{max}}}}
 \def\RuleSet{{\mathcal S}}
 \def\Cap{\text{cap}}
+\def\Supp{\text{supp}}
 
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\Ac}{\mathcal{A}^c}
